--- a/projetoum/.eslintrc.json
+++ b/projetoum/.eslintrc.json
@@ -23,6 +23,10 @@
         "prettier"
     ],
     "rules": {
+      "@typescript-eslint/no-unused-vars": ["error",{
+        "argsIgnorePattern": "_"
+      }],
+      "@typescript-eslint/camelcase": "off",
       "import/extensions": [
         "error",
         "ignorePackages",
