--- a/primeiro-projeto-react/.eslintrc.json
+++ b/primeiro-projeto-react/.eslintrc.json
@@ -41,6 +41,12 @@
         "react-hooks/exhaustive-deps": "warn",
         "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
         "import/prefer-default-export": "off",
+        "@typescript-eslint/explicit-function-return-type": [
+            "error",
+            {
+                "allowExpressions": true
+            }
+        ],
         "prettier/prettier": "error"
     },
     "settings": {
