--- a/gobarber-web/.eslintrc.json
+++ b/gobarber-web/.eslintrc.json
@@ -38,6 +38,9 @@
             }
           ],
         "react-hooks/rules-of-hooks": "error",
+        "react/jsx-props-no-spreading": "off",
+        "react/prop-types":"off",
+        "react/jsx-indent-props":"off",
         "react-hooks/exhaustive-deps": "warn",
         "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
         "import/prefer-default-export": "off",
