--- a/projetoum/.eslintrc.json
+++ b/projetoum/.eslintrc.json
@@ -1,14 +1,11 @@
 {
     "env": {
         "es6": true,
-        "node": true,
-        "jest": true
+        "node": true
     },
     "extends": [
         "airbnb-base",
-        "plugin:@typescript-eslint/recommended",
-        "prettier/@typescript-eslint",
-        "plugin:prettier/recommended"
+        "plugin:@typescript-eslint/recommended"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -20,29 +17,20 @@
         "sourceType": "module"
     },
     "plugins": [
-        "@typescript-eslint",
-        "prettier"
+        "@typescript-eslint"
     ],
     "rules": {
-      "@typescript-eslint/no-unused-vars": ["error",{
-        "argsIgnorePattern": "_"
-      }],
-      "@typescript-eslint/camelcase": "never",
       "import/extensions": [
-        "error",
-        "ignorePackages",
-        {
-          "ts": "never"
-        }
-      ],
-      "prettier/prettier": "error",
-      "class-methods-use-this": "off",
-      "no-useless-constructor": "off"
+	      "error",
+	      "ignorePackages",
+	      {
+	        "ts": "never"
+	      }
+	    ]
     },
-
     "settings": {
-        "import/resolver": {
-          "typescript": {}
-        }
-      }
+	    "import/resolver": {
+	      "typescript": {}
+	    }
+	  }
 }
