--- a/projetoum/tsconfig.json
+++ b/projetoum/tsconfig.json
@@ -11,6 +11,7 @@
     "strict": true,
      "strictPropertyInitialization": false,
      "baseUrl": "./src",
+     "allowJs": true,
      "paths": {
       "@modules/*": ["modules/*"],
       "@config/*": ["config/*"],
