--- a/projetoum/package.json
+++ b/projetoum/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.7",
+    "@types/redis": "^2.8.28",
     "aws-sdk": "^2.784.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^13.0.3",
@@ -29,6 +30,8 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.13",
     "pg": "^8.4.2",
+    "rate-limiter-flexible": "^2.1.13",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
     "typeorm": "^0.2.28",
@@ -40,6 +43,7 @@
     "@types/ioredis": "^4.17.7",
     "@types/jest": "^26.0.14",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongodb": "^3.5.33",
     "@types/multer": "^1.4.4",
     "@types/nodemailer": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
