--- a/projetoum/.eslintrc.json
+++ b/projetoum/.eslintrc.json
@@ -26,6 +26,7 @@
   "rules": {
     "no-underscore-dangle": "off",
     "prettier/prettier": "error",
+    "@typescript-eslint/camelcase": "off",
     "class-methods-use-this": "off",
     "no-useless-constructor": "off",
     "import/no-duplicates": "off",
