--- a/gobarber-web/.eslintrc.json
+++ b/gobarber-web/.eslintrc.json
@@ -45,6 +45,7 @@
         "react-hooks/exhaustive-deps": "warn",
         "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
         "import/prefer-default-export": "off",
+        "import/no-duplicates": "off",
         "react/jsx-one-expression-per-line": "off",
         "react/jsx-indent": "off",
         "@typescript-eslint/camelcase": "off",
