--- a/appgobarber/.eslintrc.json
+++ b/appgobarber/.eslintrc.json
@@ -47,6 +47,8 @@
       "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
       "import/prefer-default-export": "off",
       "react/jsx-one-expression-per-line": "off",
+      "@typescript-eslint/camelcase": "off",
+      "import/no-duplicates": "off",
       "react/jsx-indent": "off",
       "@typescript-eslint/explicit-function-return-type": [
           "error",
