--- a/appgobarber/package.json
+++ b/appgobarber/package.json
@@ -18,6 +18,7 @@
     "@unform/core": "^2.1.3",
     "@unform/mobile": "^2.1.3",
     "axios": "^0.20.0",
+    "date-fns": "^2.16.1",
     "express": "^4.17.1",
     "react": "16.13.1",
     "react-native": "0.63.2",
