--- a/gobarber-web/package.json
+++ b/gobarber-web/package.json
@@ -45,7 +45,6 @@
       "!src/hooks/index.tsx"
     ]
   },
-
   "browserslist": {
     "production": [
       ">0.2%",
@@ -60,10 +59,12 @@
   },
   "devDependencies": {
     "@testing-library/react": "^11.2.1",
+    "@testing-library/react-hooks": "^3.4.2",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
+    "axios-mock-adapter": "^1.19.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
@@ -74,7 +75,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
     "jest-environment-jsdom-sixteen": "^1.0.3",
-    "prettier": "^2.1.1"
+    "prettier": "^2.1.1",
+    "react-test-renderer": "^17.0.1"
   }
-
 }
