--- a/gobarber-web/package.json
+++ b/gobarber-web/package.json
@@ -5,10 +5,11 @@
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.9",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/testing-library__dom": "^7.5.0",
     "@types/yup": "^0.29.6",
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
@@ -23,7 +24,7 @@
     "react-scripts": "3.4.0",
     "react-spring": "^8.0.27",
     "styled-components": "^5.1.1",
-    "typescript": "~3.7.2",
+    "typescript": "^4.1.2",
     "uuidv4": "^6.2.3",
     "yup": "^0.29.3"
   },
@@ -58,7 +59,7 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^11.2.1",
+    "@testing-library/react": "^11.2.2",
     "@testing-library/react-hooks": "^3.4.2",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.3",
