--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_KEY }} 
-          source: "dist"
+          source: "gostack/projetoum/dist"
           target: "test"
           
         # Copiar pasta dist para dentro da digital Ocean
